fix darkmode overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,7 @@
 .dark {
   background-color: #1d2530;
   color: #fffff2;
+  overflow: auto;
 
   & svg,
   & a {
